CV Content update

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <td>
                 <h1> Suriya Selvaraj</h1>
                 <p><em>Splz. Senior Infra Engineer.</em></p>
-                <p>Web Developer and System Support at TRPSDS Private Ltd. Chennail I love to learn interesting Technology related talks, Identify and clear problems.</p>            
+                <p>Web Developer and System Support at Mphasis Limited, Chennai. I am capable of writing clean code and enjoy troubleshooting problems and finding solutions over continuous manual tasks to keep things simple.</p>            
             </td>
         </tr>
     </table>
@@ -47,7 +47,7 @@
             <tr>
                 <td>2018-Present date</td>
                 <td>Splz. Senior Infra Engineer</td>
-                <td>TRPSDS Private Ltd. Chennail</td>
+                <td>Mphasis Limited, Chennai</td>
             </tr>
         </tbody>
         <tfoot></tfoot>
