--- a/hobies.html
+++ b/hobies.html
@@ -4,13 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Hobbies</title>
+    <link rel="stylesheet" href="./CSS/styles.css">
+    <title>About Me Page</title>
 </head>
 <body>
-    <h3>My Hobbies</h3>
+    <h1>My Hobbies</h1>
     <ol>
-        <li>Solve code problems using Javascript - Hackerrank. <strong><a href="https://www.hackerrank.com/dashboard">Hackerrank</a></strong></li>
-        <li>Listen to TED talks <strong><a href="https://www.ted.com/talks"> TED Talks HomePage</a></strong></li>
+        <li class="headlines">TED talks
+            <p class="description">I listen on topics related to inovation, lifestyle and Technology</p>
+        </li>
+        <li class="headlines">Anime
+            <p class="description">I watch most of the anime for the ideologies it carries, music and love the art.</p>
+        </li>
+        <li class="headlines">Gardening and Farming
+            <p class="description">Enjoyed the tastes of hard labor and the pleasant aura it gave me to calm myself.</p>
+        </li>
+        <li class="headlines">Cooking
+            <p class="description">Capable of cooking edible dishes, with zero risks.</p>
+        </li>
     </ol>
 </body>
 </html>
