--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
             <img src="./images/Suriya1.jpg" alt="Suriya Selvaraj">
             <h1>Suriya Selvaraj</h1>
         </div>
-
         <div class="summary">
             <h3>SUMMARY</h3>
             <p> A developer dedicated to gaining knowledge and improving myself to take up new and harder challenges by every day. A team player with good communication skills and sound technical knowledge.</p>
@@ -94,7 +93,7 @@
             <h3>Other</h3>
             <ul>
                 <li>
-                    <a href="hobbies.html"><h3>My Hobbies</h3></a>
+                    <a href="hobies.html"><h3>My Hobbies</h3></a>
                 </li>
                 <li>
                     <a href="contact.html"><h3>Contact Me</h3></a>    
