--- a/contact.html
+++ b/contact.html
@@ -4,27 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Me</title>
+    <title>Contact Me Page</title>
 </head>
 <body>
-    <h1>My Contact details</h1>
-    <p>Unknown Address</p>
-    <p>1902213230</p>
-    <p>skfsakbf@gmail.com</p>
-    
-    <form action="mailto:suriya9711@gmail.com" method="get" enctype="text/plain">
-        <h3>Message Me</h3>
-        <label>Your Name:</label>
-        <input type="text" name="userName"value="">
-        <br>
-        <label>Your Email ID:</label>
-        <input type="email" name="eId" value="">
-        <br>
-        <label>Your Message:</label>
-        <br>
-        <textarea name="comment" id="" cols="40" rows="10"></textarea>
-        <br>
-        <input type="submit">
-    </form>
+    <h2>Suriya Selvaraj</h2>
+    <table>
+        <thead></thead>
+        <tbody>
+            <tr>
+                <td>Email ID</td>
+                <td class="details">xyz@gmail.com</td>
+            </tr>
+            <tr>
+                <td>Mobile Contact</td>
+                <td class="details">+91-xxxxx xxxxx</td>
+            </tr>
+            <tr>
+                <td>Country</td>
+                <td class="details">India</td>
+            </tr>
+            <tr>
+                <td>State</td>
+                <td class="details">Tamil Nadu</td>
+            </tr>
+            <tr>
+                <td>Address</td>
+                <td class="details">00/00, xyz street, mnopq district.</td>
+            </tr>
+            <tr>
+                <td>Pin Code</td>
+                <td>axy-xyz</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
