Update summary - index.html

--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
         </div>
         <div class="summary">
             <h3>SUMMARY</h3>
-            <p> A developer dedicated to gaining knowledge and improving myself to take up new and harder challenges by every day. A team player with good communication skills and sound technical knowledge.</p>
-            <p>Have good working experience in HTML, CSS, Javascript, Node Js and MongoDB to build web site that provides information that is updating every 20 seconds.</p>
-            <p>I have experience monitoring mainframe systems using Python automations and Flask projects, and have also worked on maintaining servers and virtual machines.</p>    
+            <p>A developer dedicated to gaining knowledge and improving myself to take up new and harder challenges by every day. A team player with good communication skills and sound technical knowledge.</p>
+            <p>I have good working experience in HTML, CSS, Javascript, Node JS and MongoDB to build basic CRUD operations based websites. I have experience creating automations monitoring & maintaining mainframe systems using Python, and have also worked on maintaining servers and virtual machines.</p>    
         </div>
         <div>
             <h3>EDUCATION</h3>
