Updated Work Experience

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="skillset">
             <h3>Technical Skills</h3>
             <ol>
-                <p>TPF Operations Server Developer & Support - ⭐️⭐️⭐️⭐️⭐️</p>
+                <p>TPF Operations Server Developer & Support</p>
                 <li>Obhect Oriented REXX                     - ⭐️⭐️⭐️⭐️⭐️</li>
                 <li>TOS RAVEN variations                     - ⭐️⭐️⭐️⭐️⭐️</li>
                 <li>TPF Assembler                            - ⭐️⭐️⭐️</li>
