Update skillset - index.html

--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
         <div class="skillset">
             <h3>Technical Skills</h3>
             <ol>
-                <p>TPF Operations Server Developer & Support</p>
+                <p><strong>TPF Operational Servers Support</strong></p>
                 <li>Obhect Oriented REXX                     - ⭐️⭐️⭐️⭐️⭐️</li>
                 <li>TOS RAVEN variations                     - ⭐️⭐️⭐️⭐️⭐️</li>
                 <li>TPF Assembler                            - ⭐️⭐️⭐️</li>
             </ol>
             <ol>
-                <p>Web developer</p>
+                <p><strong>Web developer</strong></p>
                 <li>HTML5                - ⭐️⭐️⭐️⭐️</li> 
                 <li>CSS                  - ⭐️⭐️⭐️⭐️</li>
                 <li>JS                   - ⭐️⭐️⭐️⭐️</li>
